# TB2026_July_Analysis

./: .gitignore  CMakeLists.txt  install.sh
config/: Run_Info.csv  electron_energy_adc_sum_comparison_43V.json  electron_energy_adc_sum_comparison_45V.json  electron_energy_adc_sum_comparison_RF12_43V.json  electron_energy_adc_sum_comparison_RF12_45V.json  electron_energy_adc_sum_comparison_RF4_45V.json  energy_adc_sum_comparison_2026_07_05_06.json  hadron_energy_adc_sum_comparison_43V.json  hadron_energy_adc_sum_comparison_45V.json  hadron_energy_adc_sum_comparison_RF4_43V.json  hadron_energy_adc_sum_comparison_RF4_45V.json  position_adc_sum_comparison_RF4_43V.json  temperature_adc_sum_comparison_2026_07_05.json
include/binparse/: bytecursor.hpp  parser.hpp  sample.hpp  tail.hpp
reference/: logbook.csv  sample_events_tree_schema.csv  scan_0_analysis.root  sj_002_raw_browser.py
scripts/: 001_Rootifier.cxx  002_ADC_Analysis.cxx  003_ADC_Sum_Comparison.cxx  004_QC.cxx  005_ToT_Analysis.cxx  006_ToT_Sum_Comparison.cxx  007_ToA_Analysis.cxx  101_SingleRun_ADC_Analysis.cxx
workflow/: README.md  Snakefile  compress_raw_zstd.sh  download_compress_raw.sh
